repa-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: repa-app
  name: repa-deployment
  namespace: prod
spec:
#  replicas: 6
  selector:
    matchLabels:
      app: repa-app
  template:
    metadata:
      labels:
        app: repa-app
    spec:
      containers:
      - image: dmajoros/repa:latest
        name: repa-app
        resources: 
          limits:
            cpu: 500m
          requests:
            cpu: 200m
