repa-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: repa-app
  labels:
    app: repa-app
  namespace: prod
spec:
   selector:
     app: repa-app
   type: LoadBalancer
   ports:
   - protocol: TCP
     port: 80
     targetPort: 80
