repa-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: repa-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: repa.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: repa-app
            port:
              number: 80
